# nomorebeans

./: .prettierignore  README.md  docker-compose.yaml  eslint.config.js  package.json  vite.config.js
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20251110002427_create_profiles.sql  20251114182033_profile_telemetry.sql  20251116033613_update_current_deleted_users.sql
src-tauri/src/: command.rs  lib.rs  main.rs  state.rs
src-tauri/src/models/v1/: mod.rs  profile_model.rs
src-tauri/src/repositories/v1/: profile_repository.rs
src-tauri/src/services/: mod.rs  profile_service.rs
src-tauri/src/services/domain/models/: mod.rs  profile_domain_model.rs
src-tauri/src/services/dto/: mod.rs  profile_dto.rs
src-tauri/src/utils/: db.rs  mod.rs
src-tauri/src/utils/error/: implementation.rs  mapping.rs  mod.rs
src-tauri/src/utils/fs/: common.rs  mod.rs  profile_picture.rs
src/lib/: constants.ts
src/lib/api/: profile-service.ts
src/lib/api/types/: error.ts  profile.ts  settings.ts
src/lib/components/: Button.svelte  CreateProfileModal.svelte  EditProfileModal.svelte  ProfileCard.svelte  Title.svelte
src/lib/utils/: avatar.ts  file.ts  index.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/manage-users/: +page.svelte
