[package]
name = "nomorebeans"
version = "0.1.0"
description = "A Tauri App"
authors = ["devkcud"]
edition = "2021"

[lib]
name = "nomorebeans_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dotenvy = "0.15.7"
serde = "1.0.228"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tokio = { version = "1.48.0", features = ["full"] }
