[package]
name = "nomorebeans"
version = "0.1.0"
description = "A Tauri App"
authors = ["devkcud"]
edition = "2021"

[lib]
name = "nomorebeans_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22.1"
dirs = "5"
dotenvy = "0.15.7"
image = {version = "0.25.8", features = ["webp"] }
regex = "1.12.2"
serde = "1.0.228"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
